Remove 'org.beryx.jlink'